Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ instance can also be used with appropriate modifications in code.</p>
 <h4>
 <a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots:</h4>
 
-<p><img src="http://jayeshcp.files.wordpress.com/2013/10/mongodb-php-demo1.png"></p>
+<p><img src="http://jayeshcp.files.wordpress.com/2013/10/my_diary.png" alt="MongoDemo PHP - Main Screen"></p>
+
+<p><img src="http://jayeshcp.files.wordpress.com/2013/10/my_diary_and_jayeshcp_mongodemo-php.png" alt="MongoDemo PHP - Sliding Panel"></p>
 
 <p>Email <a href="mailto:me@jayeshcp.com">me@jayeshcp.com</a> if you need any help with this project.</p>
 
